[package]
name = "twm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
#smithay = "0.3.0"

[patch.crates-io]
smithay = {git = 'https://github.com/Smithay/smithay.git'}

[dependencies.smithay]
#default-features = false
#features = ["desktop", "wayland_frontend"]
