[package]
name = "twm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"

[dependencies.smithay]
git = 'https://github.com/Smithay/smithay.git'
default-features = false
features = ["desktop", "wayland_frontend", "backend_winit"]

